@@ -1,3 +1,15 @@
+2018-01-18  Dewei Zhu  <dewei_zhu@apple.com>
+
+        Should allow updating a build-request to 'canceled'.
+        https://bugs.webkit.org/show_bug.cgi?id=181819
+
+        Reviewed by Ryosuke Niwa.
+
+        It's possible syncing script update a build-request to 'canceled' state.
+
+        * public/api/build-requests.php: Added 'canceled' as an acceptable update state.
+        * server-tests/api-build-requests-tests.js: Added a unit test to update a build-request to 'canceled'.
+
 2018-01-18  Aakash Jain  <aakash_jain@apple.com>
 
         Add support for builderNameToIDMap in BuildbotSyncer
